first basic authentication with loginpage